Grupos por Curso Aperturado seleccionado

--- a/client/app/views/aprobacion/cursos/list-grupo.html
+++ b/client/app/views/aprobacion/cursos/list-grupo.html
@@ -107,14 +107,13 @@
 
     </md-tab>
     <!-- segunda pestaña-->
-    <md-tab label="GRUPOS APERTURADOS" ng-click="ListGruposCursos()">
+    <md-tab label="GRUPOS APERTURADOS">
         <md-content class="md-padding">
         <!-- CONTENIDO -->
         <div class="table-responsive">
           <table ng-table="tableParamsGrupo" show-filter="false" class="table table-hover table-condensed table-striped table-bordered ">
 
-
-           <tbody ng-repeat="group in $groups">
+           <tbody ng-repeat="group in $groups" >
              <tr class="ng-table-group">
                 <td colspan="2">
                   <a href class="groupTitle" ng-click="group.$hideRows = !group.$hideRows">
@@ -122,12 +121,12 @@
                     <strong>Curso: {{group.value}} </strong>
                   </a>
                 </td>
-                <td><strong>{{group.data[0]._codigo_curso}}</strong></td>
-                <td><strong>{{group.data[0]._cursoAperturadoPeriodo._planestudiodetalle.ciclo}}</strong></td>
+                <td><strong>{{group.data[0]._planestudiodetalle._curso.codigo}}</strong></td>
+                <td><strong>{{group.data[0]._planestudiodetalle.ciclo}}</strong></td>
                 <td colspan="{{$columns.length-4}}"></td>
              </tr>
 
-             <tr ng-hide="group.$hideRows"  ng-repeat="item in group.data" ng-click="item.active=!item.active">
+             <tr ng-hide="group.$hideRows"  ng-repeat="item in group.data[0]._grupos" ng-click="item.active=!item.active" ng-if="item._grupos.length != '0'">
 
                 <td style="width:30px;">
                   <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
