--- a/client/app/views/aprobacion/cursos/list-grupo.html
+++ b/client/app/views/aprobacion/cursos/list-grupo.html
@@ -73,7 +73,7 @@
                 <td><strong>{{getHorasCiclo(group.data)}}</strong></td>
                 <td colspan="{{$columns.length-5}}"></td>
               </tr>
-              <tr ng-hide="group.$hideRows" ng-repeat="item in group.data" ng-click="item.active=!item.active;EnabledEdit(item,$groups);ListGruposCursos(item._id)" ng-if="filter._planestudios._id == item._planestudiodetalle._planestudio">
+              <tr ng-hide="group.$hideRows" ng-repeat="item in group.data" ng-click="item.active=!item.active;EnabledEdit(item,$groups)" ng-if="filter._planestudios._id == item._planestudiodetalle._planestudio">
 
 
 
@@ -113,12 +113,12 @@
         <div class="table-responsive">
           <table ng-table="tableParamsGrupo" show-filter="false" class="table table-hover table-condensed table-striped table-bordered ">
 
-           <tbody ng-repeat="group in $groups" >
-             <tr class="ng-table-group">
+           <tbody ng-repeat="group in $groups" ng-if="group.data[0]._grupos.length != '0' && group.data[0]._planestudiodetalle._planestudio == filter._planestudios._id" >
+             <tr class="ng-table-group" >
                 <td colspan="2">
                   <a href class="groupTitle" ng-click="group.$hideRows = !group.$hideRows">
                     <span class="fa" ng-class="{ 'fa-chevron-right': group.$hideRows, 'fa-chevron-down': !group.$hideRows }"></span>
-                    <strong>Curso: {{group.value}} </strong>
+                    <strong>Curso: {{group.value}}</strong>
                   </a>
                 </td>
                 <td><strong>{{group.data[0]._planestudiodetalle._curso.codigo}}</strong></td>
@@ -126,7 +126,7 @@
                 <td colspan="{{$columns.length-4}}"></td>
              </tr>
 
-             <tr ng-hide="group.$hideRows"  ng-repeat="item in group.data[0]._grupos" ng-click="item.active=!item.active" ng-if="item._grupos.length != '0'">
+             <tr ng-hide="group.$hideRows"  ng-repeat="item in group.data[0]._grupos" ng-click="item.active=!item.active">
 
                 <td style="width:30px;">
                   <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
