add edit and delete to schedules and hours

--- a/client/app/views/horarios/form-horario.html
+++ b/client/app/views/horarios/form-horario.html
@@ -29,7 +29,7 @@
         <div flex>
             <md-input-container class="md-block">
               <label>Hora Inicio</label>
-              <input type="time" placeholder="HH:mm" ng-model="model.horaInicio">
+              <input type="time" placeholder="HH:mm" min="00:00" max="23:59" ng-model="model.horaInicio">
             </md-input-container>
         </div>
         <div flex>
