--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -1,29 +1,30 @@
-<div class="bg-login"  layout="column" layout-fill>
-
-
-<div class="ct-app">
-
+<div class="bg-login" layout="column" layout-fill>
+  <div class="ct-app">
     <div class="ct-login z-depth-1">
-  <span class="fs-headline display-block">{{app.name}}</span>
-  <span class="fs-caption display-block">{{app.corporation}}</span>
+      <span class="fs-headline display-block">{{app.name}}</span>
+      <span class="fs-caption display-block">{{app.corporation}}</span>
 
-  <form ng-submit="Login()" class="text-left fs-body-1">
-    <lx-text-field label="Usuario">
-    <input type="text" ng-model="user.username" >
-  </lx-text-field>
-  <lx-text-field label="Contraseña">
-  <input type="password" ng-model="user.password" >
-</lx-text-field>
-<br>
-<br>
+      <form ng-submit="Login()" class="text-left fs-body-1">
+        <lx-text-field label="Usuario">
+          <input type="text" ng-model="user.username">
+        </lx-text-field>
+        <lx-text-field label="Contraseña">
+          <input type="password" ng-model="user.password">
+        </lx-text-field>
+        <br>
+        <p>
+            <md-button ng-href="/#/getCode">Obtener código universitario</md-button>
+            <md-button ng-href="/#/recoverPass">Recuperar contraseña</md-button>
+            <!--a href="/#/getCode">Obtener código universitario</a><br/>
+            <a href="/#/recoverPass">Recuperar contraseña</a-->
+        </p>
+        <br>
+        <md-button class="md-raised md-warn tc-white" aria-label="Entrar" style="float:right;">
+          <md-icon md-font-icon="fa fa-lock fa-lg tc-white"></md-icon>
+          Entrar
+        </md-button>
+      </form>
 
-<md-button class="md-raised md-warn tc-white" aria-label="Entrar" style="float:right;">
-  <md-icon md-font-icon="fa fa-lock fa-lg tc-white"></md-icon>
-  Entrar
-</md-button>
-</form>
-
-</div>
-</div>
-
+    </div>
+  </div>
 </div>
