UI Recuperar Contraseña, Recuperar CU - Parte 2

--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -23,6 +23,10 @@
           <md-icon md-font-icon="fa fa-lock fa-lg tc-white"></md-icon>
           Entrar
         </md-button>
+        <md-button class="md-raised md-warn tc-white" aria-label="Entrar" style="float:right;">
+          <md-icon md-font-icon="fa fa-credit-card fa-lg tc-white"></md-icon>
+          Recuperar datos
+        </md-button>
       </form>
 
     </div>
