UI Recuperar Contraseña, Recuperar CU - Parte 3

--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -13,20 +13,20 @@
         </lx-text-field>
         <br>
         <p>
-            <md-button ng-href="/#/getCode">Obtener código universitario</md-button>
-            <md-button ng-href="/#/recoverPass">Recuperar contraseña</md-button>
-            <!--a href="/#/getCode">Obtener código universitario</a><br/>
-            <a href="/#/recoverPass">Recuperar contraseña</a-->
+            <!--md-button ng-href="/#/getCode">Obtener código universitario</md-button>
+            <md-button ng-href="/#/recoverPass">Recuperar contraseña</md-button-->
+            <a href="/#/getCode">Obtener código universitario</a><br/>
+            <a href="/#/recoverPass">Recuperar contraseña</a>
         </p>
         <br>
         <md-button class="md-raised md-warn tc-white" aria-label="Entrar" style="float:right;">
           <md-icon md-font-icon="fa fa-lock fa-lg tc-white"></md-icon>
           Entrar
         </md-button>
-        <md-button class="md-raised md-warn tc-white" aria-label="Entrar" style="float:right;">
+        <!--md-button class="md-raised md-warn tc-white" aria-label="Entrar" style="float:right;">
           <md-icon md-font-icon="fa fa-credit-card fa-lg tc-white"></md-icon>
           Recuperar datos
-        </md-button>
+      </md-button-->
       </form>
 
     </div>
