--- a/client/app/views/recoverpass.html
+++ b/client/app/views/recoverpass.html
@@ -11,7 +11,7 @@
 
         <br>
         <p>
-            <md-button ng-href="/#/">Iniciar Sesión</md-button>
+            <a href="/#/">Iniciar Sesión</md-button>
         </p>
         <br>
         <md-button class="md-raised md-warn tc-white" aria-label="Recuperar Clave" style="float:right;">
