--- a/client/app/styles/styls/home.styl
+++ b/client/app/styles/styls/home.styl
@@ -3,6 +3,11 @@
   right 10px
   bottom 10px
   z-index 1000
+
+.profile-photo
+   width 80px
+   height 80px
+
 @media (max-width: 700px)
   .app-title-module
     display none
