adding new changes for course selection on matricula page

--- a/client/app/styles/styls/main.styl
+++ b/client/app/styles/styls/main.styl
@@ -269,3 +269,9 @@ md-icon.fa
 
 md-icon.s32 span
 	padding-left 8px
+
+.cursos-inscritos
+	margin-top 20px
+
+.cursos-inscritos-p
+	margin 10px 0px
