se agrega la funcionalidad de agregar curso a la matricula, validar que un curso ya fue seleccionado

--- a/client/app/styles/styls/main.styl
+++ b/client/app/styles/styls/main.styl
@@ -275,3 +275,9 @@ md-icon.s32 span
 
 .cursos-inscritos-p
 	margin 10px 0px
+
+.btn-inscription
+	position: absolute !important;
+	right: 10px;
+	bottom: 10px;
+	width: 200px
