se agrega la funcionalidad de agregar curso a la matricula, validar que un curso ya fue seleccionado

--- a/client/app/views/matricula/inscripcion-form.html
+++ b/client/app/views/matricula/inscripcion-form.html
@@ -49,12 +49,13 @@
                   </td>
                 </tr>
               </tbody>
-              <tbody>
             </table>
           </div>
           <!-- fin de pestañas -->
         </md-content>
       </div>
     </md-dialog-content>
+    <button ng-if="addMode" class="btn btn-success btn-block btn-inscription" ng-click="addCursos()">Agregar Cursos</button>
+    <button ng-if="updateMode" class="btn btn-success btn-block col-md-3 btn-inscription" ng-click="addCursos()">Actualizar Curso</button>
   </form>
 </md-dialog>
