Corrección Secciones: cuando filtros combos no estan seleccionados

--- a/client/app/views/secciones/form.html
+++ b/client/app/views/secciones/form.html
@@ -60,8 +60,8 @@
         </div>
       </div>
       <div flex layout="row" layout-sm="column">
-        <div flex="30" layout-align="start start" flex-sm="100" class="text-left" ng-if="includeActive">
-          <md-checkbox ng-model="model.activo">
+        <div flex="30" layout-align="start start" flex-sm="100" class="text-left">
+          <md-checkbox ng-model="model.activo" ng-if="includeActive">
             Activo
           </md-checkbox>
         </div>
