--- a/client/app/views/conflictosalumnos/list.html
+++ b/client/app/views/conflictosalumnos/list.html
@@ -16,7 +16,7 @@
             </td>
             <td class="text-left" data-title="'Alumno'" sortable="_alumno" filter="{'_alumno':'text'}">{{item._alumno}}</td>
             <td class="text-left" data-title="'Conflicto'" sortable="_conflicto" filter="{'_conclicto':'text'}">{{item._conflicto}}</td>
-            <td class="text-left" data-title="'Estado'" sortable="estado" filter="{'estado':'text'}">{{item.estado}}</td>
+            <td class="text-left" data-title="'Estado'" sortable="estado" filter="{'estado':'select'}" filter-data="estados">{{item.estado}}</td>
           </tr>
         </tbody>
       </table>
