Listar Pendientes por Alumno

--- a/client/app/views/matricula/revision.html
+++ b/client/app/views/matricula/revision.html
@@ -59,8 +59,8 @@
           <table ng-table="tableParamsDeudas" show-filter="true" class="table table-hover table-condensed table-striped table-bordered">
             <tbody>
             <tr ng-repeat="item in $data" ng-class="{'table-selected-row bgc-teal-50':item.active}" ng-if="UI.deudasValue">
-                <td class="text-left" data-title="'Código'">{{item.codigo}}</td>
-                <td class="text-left" data-title="'Descripción'">{{item.descripcion}}</td>
+                <td class="text-left" data-title="'Código'">{{}}</td>
+                <td class="text-left" data-title="'Descripción'">{{item._tasa.nombre}}</td>
                 <td class="text-left" data-title="'Monto'">S/.{{item.saldo}}</td>
             </tr>
 
@@ -78,7 +78,7 @@
    <strong>No es posible iniciar el proceso de matricula</strong>
  </div>
 
-<div layout="row" layout-fill ng-if="UI.nextStage1&&UI.nextStage2">
+<div layout="row" layout-fill ng-if="UI.nextStage1&&UI.nextStage2" ng-click="RegisterMatricula()" >
    <a href="#/home/matricula/inscripcion" ui-sref="app.matriculainscripcion">
  <button class="md-button" style="background-color: rgb(255,152,0);color:white;text-align:center;padding: 5px;">Iniciar el proceso de matricula</button>
  </a>
